# datazen

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vite.config.ts
.cursor/skills/bump-version/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pages.yml  release.yml
docs/: PRD.md  backend-architecture.md  frontend-architecture.md  index.html
docs/marketing/: GITHUB_PAGES.md  README.md
docs/marketing/launch/: POSTING_STATUS.md  README.md  juejin.md  product-hunt.md  reddit.md  show-hn.md  twitter-thread-en.md  (+2 more)
docs/screenshots/: mockup.html
e2e/: create-sqlite-test-db.mjs  helpers.ts  run.mjs  tsconfig.json  wdio.conf.ts
e2e/specs/: backup-database.ts  connection-search-group.ts  connection-window.ts  data-types.ts  drag-drop-groups.ts  edit-delete-connection.ts  export-import.ts  homepage-features.ts  i18n-menu.ts  kiwi.ts  main-window.ts  mysql.ts  new-connection.ts  redis.ts  settings.ts  sql-query.ts  sqlite.ts  table-data.ts  table-edit.ts  table-structure.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ssh_tunnel.rs
src-tauri/src/cache/: mod.rs  schema_cache.rs
src-tauri/src/commands/: backup.rs  config.rs  connection.rs  data.rs  file.rs  kiwi.rs  kv.rs  mod.rs  query.rs  schema.rs  sync.rs
src-tauri/src/db/: kiwi.rs  mod.rs  mysql.rs  olap.rs  postgres.rs  redis_driver.rs  registry.rs  sqlite.rs
src-tauri/src/db/traits/: kv.rs  mod.rs
src-tauri/src/services/: connection_manager.rs  mod.rs  query_executor.rs
src-tauri/src/store/: mod.rs
src/commands/: connection.ts  database.ts  file.ts  query.ts  settings.ts
src/components/: FilterBar.tsx  HeaderControls.tsx  LanguageToggle.tsx  SqlCodeBlock.tsx  SqlEditor.tsx  StatusBar.tsx  ThemeToggle.tsx  TitleBar.tsx  Toolbar.tsx  TrafficLights.tsx  WindowControls.tsx
src/hooks/: useColumnResize.ts  useI18n.ts  useKeyboardShortcuts.ts  usePlatform.ts  useResizable.ts  useTauriEvent.ts  useThemeListener.ts  useVirtualTable.ts
src/lib/: crossWindowBus.ts  databaseTypes.ts  exportData.ts  formatters.ts  importData.ts  schemaCache.ts  startupTimer.ts  windowKind.ts  windowManager.ts
src/locales/: en.ts  index.ts  t.ts  zh-CN.ts
src/stores/: activeConnectionStore.ts  connectionStore.ts  queryStore.ts  schemaStore.ts  settingsStore.ts  tableDataStore.ts  uiStore.ts
src/styles/: globals.css  themes.css
src/types/: index.ts
(+73 files in other folders)
